--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+.ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 25px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
