--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   margin: 25px;
 }
 
+.li {
+  margin-top: 25px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
